--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,9 @@ jobs:
         run: npm ci
       - name: build
         run: npm run build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v1.0.7
+      - name: Deploy GitHub Pages site
+        uses: actions/deploy-pages@v1.2.3
         with:
-          folder: dist
+          token: ${{ secrets.DEPLOY_TOKEN }}
