--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
         run: npm run build
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1.0.7
+        with:
+          path: dist/
       - name: Deploy GitHub Pages site
         uses: actions/deploy-pages@v1.2.3
         with:
