--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "munch-and-mingle",
+  "name": "pocket-vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,18 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.15.0",
-    "firebaseui": "^6.0.2",
+    "@blueprintjs/core": "^4.16.2",
+    "@blueprintjs/datetime2": "^0.9.15",
+    "pocketbase": "^0.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^5.1.1",
-    "react-firebaseui": "^6.0.0",
     "react-multi-date-picker": "^3.3.4",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^17.0.53",
+    "@types/react-dom": "^17.0.19",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
