--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@blueprintjs/core": "^4.16.2",
     "@blueprintjs/datetime2": "^0.9.15",
+    "date-fns": "^2.29.3",
     "pocketbase": "^0.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
